--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Yuxin Gao
 url: https://github.com/Ariel12138
 resume_site: https://github.com/Ariel12138
 github: https://github.com/Ariel12138
-baseurl: '/JekyllHelpCenter'
+baseurl: ''
 description: Actually, less is more!
 meta_description: Jekyll教程；Jekyll开发；帮助中心开发；
 motto: It's our wits that make us men.
