--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: '/JekyllHelp'
 description: Actually, less is more!
 meta_description: Jekyll教程；Jekyll开发；帮助中心开发；
 motto: It's our wits that make us men.
-banner: 'JekyllHelpCenter'
+banner: ''
 
 #permalink: /:categories/:year/:month/:day/:title/
 permalink: /:year/:month/:day/:title/
